--- a/finalproject/app/src/main/res/values/strings.xml
+++ b/finalproject/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GetSumGame</string>
+
+    <!-- Names for the Detail Activity App Default Values -->
+    <string name="streamer_name">Streamer Name</string>
+    <string name="game_name">Game Name</string>
+    <string name="game_rating">Game Rating</string>
+    <string name="stream_span">Already Streaming xx Hours</string>
 </resources>
