Fix Date Conversion Issue. Add White Settings

--- a/finalproject/app/src/main/res/values/strings.xml
+++ b/finalproject/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="bad_game_rating">There is no rating for this game!</string>
     <string name="unknown_game_rating">Metacritic Score: XX Out Of 100</string>
     <string name="no_streamers_found">There are no Streamers For This Game!</string>
+
+    <!-- Detail Activity Helper Strings -->
+    <string name="time_zone">GMT</string>
     
 </resources>
